# kcas

./: .gitattributes  .gitignore  .ocamlformat  .prettierrc  CHANGES.md  CODE_OF_CONDUCT.md  HACKING.md  LICENSE.md  Makefile  README.md  _tags  bench.Dockerfile  dune  dune-project  index.html  kcas.opam  kcas.opam.template  kcas_data.opam  kcas_data.opam.template  kcas_test.opam  opam  update-gh-pages-for-tag  watch
.github/workflows/: workflow.yml
0.1.8/kcas/Kcas/: index.html
0.1.8/kcas/Kcas/Backoff/: index.html
0.1.8/kcas/Kcas/W1/: index.html
0.1.8/kcas/Kcas/module-type-Backoff/: index.html
0.1.8/kcas/Kcas/module-type-W1/: index.html
0.2.0/: index.html
0.2.0/kcas/: index.html
0.2.0/kcas/Kcas/: index.html
0.2.0/kcas/Kcas/Backoff/: index.html
0.2.0/kcas/Kcas/Op/: index.html
0.2.0/kcas/Kcas/Tx/: index.html
0.2.1/kcas/Kcas/: index.html
0.2.1/kcas/Kcas/Loc/: index.html
0.2.1/kcas/Kcas/Op/: index.html
0.2.1/kcas/Kcas/Tx/: index.html
0.2.2/: index.html
0.2.2/kcas/: index.html
0.2.2/kcas/Kcas/: index.html
0.2.2/kcas/Kcas/Loc/: index.html
0.2.2/kcas/Kcas/Tx/: index.html
0.2.3/kcas/Kcas/Backoff/: index.html
0.2.3/kcas/Kcas/Mode/: index.html
0.2.3/kcas/Kcas/Tx/: index.html
0.2.3/kcas/Kcas/Xt/: index.html
0.2.4/: index.html
0.2.4/kcas/Barrier/: index.html
0.2.4/kcas/Kcas/Loc/: index.html
0.2.4/kcas/Kcas/Op/: index.html
0.2.4/kcas/Tx_linked_queue/: index.html
0.2.4/kcas_data/Kcas_data/: index.html
0.2.4/kcas_data/Kcas_data/Accumulator/: index.html
0.2.4/kcas_data/Kcas_data/Hashtbl/: index.html
0.2.4/kcas_test/Barrier/: index.html
0.3.0/kcas/Kcas/: index.html
0.3.0/kcas/Kcas/Loc/: index.html
0.3.0/kcas/Kcas/Retry/: index.html
0.3.0/kcas/Kcas/Xt/: index.html
0.3.0/kcas_data/Kcas_data/: index.html
0.3.0/kcas_data/Kcas_data/Hashtbl/: index.html
0.3.0/kcas_data/Kcas_data/Promise/: index.html
0.3.1/kcas/Xt_linked_queue/: index.html
0.3.1/kcas/Xt_stack/: index.html
0.3.1/kcas_data/Kcas_data/Dllist/: index.html
0.3.1/kcas_data/Kcas_data/Queue/: index.html
0.5.0/kcas_data/Kcas_data/: index.html
0.5.1/kcas/Kcas/Mode/: index.html
0.5.1/kcas/Kcas/Xt/: index.html
0.5.2/kcas_data/Kcas_data/Hashtbl/: index.html
0.5.2/kcas_data/Kcas_data/Mvar/: index.html
0.5.2/kcas_data/Kcas_data/Promise/: index.html
0.5.3/kcas/Barrier/: index.html
0.5.3/kcas/Kcas/: index.html
0.5.3/kcas/Kcas/Xt/: index.html
0.5.3/kcas_data/Kcas_data/Promise/: index.html
0.6.0/kcas/: index.html
0.6.0/kcas_data/Kcas_data/Accumulator/: index.html
0.6.0/kcas_data/Kcas_data/Hashtbl/: index.html
0.6.0/kcas_data/Kcas_data/Mvar/: index.html
0.6.1/kcas/: db.js
0.6.1/kcas/Kcas/: index.html
0.6.1/kcas_data/: db.js
0.6.1/kcas_data/Kcas_data/: index.html
0.7.0/: index.html  sherlodoc.js
0.7.0/kcas/Kcas/: index.html
0.7.0/kcas_data/: db.js
bench/: barrier.ml  bench.ml  bench.mli  bench_accumulator.ml  bench_atomic.ml  bench_dllist.ml  bench_hashtbl.ml  bench_leftist_heap.ml  bench_loc.ml  bench_mvar.ml  bench_op.ml  bench_parallel_cmp.ml  bench_queue.ml  bench_ref.ml  bench_ref_mutex.ml  bench_stack.ml  bench_two_stack_queue.ml  bench_xt.ml  bench_xt_ro.ml  benchmark.ml  cmd.ml  core_bench.ml  domain.ocaml4.ml  dune  main.ml  tx_bench.ml  util.ml
doc/: Kcas.Backoff.html  Kcas.W1.html  Kcas.html  dev.odocl  dune  gkmz-with-read-only-cmp-ops.md  html.stamp  index.html  index_attributes.html  index_class_types.html  index_classes.html  index_exceptions.html  index_extensions.html  index_methods.html  index_module_types.html  index_modules.html  index_types.html  index_values.html  scheduler-interop.md  sherlodoc.js  simplified.ml  type_Kcas.Backoff.html  type_Kcas.W1.html  type_Kcas.html
doc/kcas/: db.js  index.html
doc/kcas/Kcas/: index.html
doc/kcas_data/: db.js  index.html
doc/kcas_data/Kcas_data/: index.html
doc/kcas_test/: index.html
doc/kcas_test/Tx_linked_queue/: index.html
index/: main.css  main.js  reset.css  version.js
pkg/: META  pkg.ml
src/: backoff.ml  backoff.mli  dune  kcas.ml  kcas.mli  kcas.mllib  kcas_backoff.ml  kcas_lf.ml  kcas_lf.mli
src/kcas/: backoff.ml  backoff.mli  domain.ocaml4.ml  dune  kcas.ml  kcas.mli  kcas.prelude.ml
src/kcas_data/: accumulator.ml  accumulator.mli  accumulator_intf.ml  bits.ml  bits.mli  ch.ml  ch.mli  condition.ml  condition.mli  condition_intf.ml  dllist.ml  dllist.mli  dllist_intf.ml  dune  elems.ml  elems.mli  hashtbl.ml  hashtbl.mli  hashtbl_intf.ml  kcas_data.ml  kcas_data.mli  kcas_data.prelude.ml  list_with_capacity.ml  list_with_capacity.mli  magic_option.ml  magic_option.mli  mutex.ml  mutex.mli  mvar.ml  mvar.mli  mvar_intf.ml  promise.ml  promise.mli  promise_intf.ml  queue.ml  queue.mli  queue_intf.ml  semaphore.ml  semaphore.mli  semaphore_intf.ml  (+8 more)
test/: benchmark.ml  dune  example.ml  loc_modes.ml  ms_queue_test.ml  test.ml  test_overlapping_loc.ml  threads.ml  tx_benchmark.ml  tx_linked_queue.ml  tx_linked_queue.mli  tx_loc_modes.ml  tx_loc_modes1.ml  tx_loc_modes2.ml  tx_loc_modes3.ml  tx_parallel_cmp_bench.ml  tx_stack.ml  tx_stack.mli  tx_test.ml  tx_two_stack_queue.ml  xt_linked_queue.mli  xt_parallel_cmp_bench.ml  xt_stack.ml  xt_stack.mli  xt_test.ml  xt_three_stack_queue.ml  xt_three_stack_queue.mli
test/compat/: domain.ocaml4.ml  domain.ocaml4.mli  dune
test/kcas/: barrier.ml  barrier.mli  benchmark.ml  dune  example.ml  loc_modes.ml  ms_queue_test.ml  test.ml  test_overlapping_loc.ml  threads.ml  xt_benchmark.ml  xt_parallel_cmp_bench.ml
test/kcas_data/: accumulator_test_stm.ml  dllist_test.ml  dllist_test_stm.ml  dune  hashtbl_bench.ml  hashtbl_test.ml  hashtbl_test_stm.ml  linearizable_chaining_example.ml  lru_cache.ml  lru_cache.mli  lru_cache_example.ml  lru_cache_intf.ml  mvar_test.ml  queue_test.ml  queue_test_stm.ml  stack_test.ml  stack_test_stm.ml  stm_run.ocaml4.ml  stm_run.ocaml5.ml  two_stack_queue_test_stm.ml  util.ml  xt_linked_queue.ml  xt_stack.ml  xt_test.ml
test/kcas_data/stm_run/: stm_run.ocaml4.ml  stm_run.ocaml5.ml
test/lib/scheduler/: dune  scheduler.ocaml4.ml  scheduler.ocaml5.ml
(+57 files in other folders)
