(lang dune 3.3)
(name kcas)
(generate_opam_files true)
(source (github ocaml-multicore/kcas))
(authors "KC Sivaramakrishnan <sk826@cl.cam.ac.uk>")
(maintainers "KC Sivaramakrishnan <sk826@cl.cam.ac.uk>")
(homepage "https://github.com/ocaml-multicore/kcas")
(license "ISC")
(package (name kcas)
 (synopsis "Software transactional memory based on lock-free multi-word compare-and-set")
 (depends 
  (ocaml (>= 5.0))
  (domain-local-await (>= 0.1.0))
  (mdx (and (>= 1.10.0) :with-test))))
(package (name kcas_data)
 (synopsis "Compositional lock-free data structures and primitives for communication and synchronization")
 (depends
  (kcas (= :version))
  (mdx (and (>= 1.10.0) :with-test))))
(using mdx 0.2)
