(lang dune 3.8)
(name kcas)
(generate_opam_files true)
(source (github ocaml-multicore/kcas))
(authors "KC Sivaramakrishnan <kc@tarides.com>")
(maintainers "Vesa Karvonen <vesa.a.j.k@gmail.com>" "KC Sivaramakrishnan <kc@tarides.com>")
(homepage "https://github.com/ocaml-multicore/kcas")
(license ISC)
(implicit_transitive_deps false)
(package (name kcas)
 (synopsis "Software transactional memory based on lock-free multi-word compare-and-set")
 (description "A software transactional memory (STM) implementation based on an atomic lock-free multi-word compare-and-set (MCAS) algorithm enhanced with read-only compare operations and ability to block awaiting for changes.")
 (depends
  (ocaml (>= 4.13.0))
  (backoff (>= 0.1.0))
  (domain-local-await (>= 1.0.0))
  (domain-local-timeout (>= 1.0.0))
  (multicore-magic (>= 2.1.0))
  (domain_shims (and (>= 0.1.0) :with-test))
  (alcotest (and (>= 1.7.0) :with-test))
  (mdx (and (>= 2.3.0) :with-test))
  (odoc (and (>= 2.2.0) :with-doc))))
(package (name kcas_data)
 (synopsis "Compositional lock-free data structures and primitives for communication and synchronization")
 (description "A library of compositional lock-free data structures and primitives for communication and synchronization implemented using kcas.")
 (depends
  (kcas (= :version))
  (multicore-magic (>= 2.1.0))
  (domain-local-await (and (>= 1.0.0) :with-test))
  (domain_shims (and (>= 0.1.0) :with-test))
  (mtime (and (>= 2.0.0) :with-test))
  (alcotest (and (>= 1.7.0) :with-test))
  (mdx (and (>= 2.3.0) :with-test))
  (yojson (and (>= 2.1.0) :with-test))
  (odoc (and (>= 2.2.0) :with-doc))))
(using mdx 0.4)
