opam-version: "2.0"
name: "kcas"
maintainer: "KC Sivaramakrishnan <sk826@cl.cam.ac.uk>"
authors: ["KC Sivaramakrishnan <sk826@cl.cam.ac.uk>"]
homepage: "https://github.com/kayceesrk/kcas"
synopsis: "Multi-word compare-and-swap library"
doc: "https://kayceesrk.github.io/kcas/doc"
license: "ISC"
dev-repo: "git+https://github.com/kayceesrk/kcas.git"
bug-reports: "https://github.com/kayceesrk/kcas/issues"
tags: []
depends: [
  "ocamlfind" {build}
  "ocamlbuild" {build}
  "dune" {build} ]
depopts: []
build: [
  ["dune" "build" "-p" name] 
]
