opam-version: "2.0"
name: "kcas"
maintainer: "KC Sivaramakrishnan <sk826@cl.cam.ac.uk>"
authors: ["KC Sivaramakrishnan <sk826@cl.cam.ac.uk>"]
homepage: "https://github.com/ocaml-multicore/kcas"
synopsis: "Multi-word compare-and-swap library"
doc: "https://ocaml-multicore.github.io/kcas/doc"
license: "ISC"
dev-repo: "git+https://github.com/ocaml-multicore/kcas.git"
bug-reports: "https://github.com/ocaml-multicore/kcas/issues"
tags: []
depends: [
  "dune" {build} ]
depopts: []
build: [
  ["dune" "build" "-p" name] 
]
