(rule
 (enabled_if
  (< %{ocaml_version} 5.0.0))
 (action
  (copy domain.ocaml4.ml domain.ml)))

(test
 (name main)
 (package kcas_data)
 (action
  (progn
   (run %{test} -brief "Kcas Loc")
   (run %{test} -brief "Kcas Xt")
   (run %{test} -brief "Kcas Xt read-only")
   (run %{test} -brief "Kcas Xt Leftist_heap (unscalable)")
   (run %{test} -brief "Kcas parallel CMP")
   (run %{test} -brief "Kcas_data Accumulator")
   (run %{test} -brief "Kcas_data Dllist")
   (run %{test} -brief "Kcas_data Hashtbl")
   (run %{test} -brief "Kcas_data Mvar")
   (run %{test} -brief "Kcas_data Queue")
   (run %{test} -brief "Kcas_data Stack")))
 (libraries kcas_data multicore-bench backoff multicore-magic))
