(library
 (name barrier)
 (modules barrier))

(library
 (name tx_linked_queue)
 (libraries kcas)
 (modules tx_linked_queue))

(library
 (name xt_three_stack_queue)
 (libraries kcas)
 (modules xt_three_stack_queue))

(test
 (name test)
 (libraries kcas barrier)
 (modules test))

(test
 (name tx_test)
 (libraries kcas tx_linked_queue xt_three_stack_queue)
 (modules tx_test tx_stack))

(test
 (name xt_test)
 (libraries kcas tx_linked_queue xt_three_stack_queue)
 (modules xt_test xt_stack))

(test
 (name test_overlapping_loc)
 (libraries kcas)
 (modules test_overlapping_loc))

(test
 (name benchmark)
 (libraries kcas)
 (modules benchmark))

(test
 (name tx_benchmark)
 (libraries kcas)
 (modules tx_benchmark))

(test
 (name tx_parallel_cmp_bench)
 (libraries kcas barrier)
 (modules tx_parallel_cmp_bench))

(test
 (name xt_parallel_cmp_bench)
 (libraries kcas barrier)
 (modules xt_parallel_cmp_bench))

(test
 (name example)
 (libraries kcas)
 (modules example))
