(library
 (name barrier)
 (modules barrier)
 (package kcas_test))

(library
 (name tx_linked_queue)
 (libraries kcas)
 (modules tx_linked_queue)
 (package kcas_test))

(test
 (name test)
 (libraries kcas barrier)
 (modules test)
 (package kcas_test))

(test
 (name tx_test)
 (libraries kcas kcas_data tx_linked_queue)
 (modules tx_test tx_stack)
 (package kcas_test))

(test
 (name xt_test)
 (libraries kcas kcas_data tx_linked_queue)
 (modules xt_test)
 (package kcas_test))

(test
 (name test_overlapping_loc)
 (libraries kcas)
 (modules test_overlapping_loc)
 (package kcas_test))

(test
 (name benchmark)
 (libraries kcas)
 (modules benchmark)
 (package kcas_test))

(test
 (name tx_benchmark)
 (libraries kcas)
 (modules tx_benchmark)
 (package kcas_test))

(test
 (name tx_parallel_cmp_bench)
 (libraries kcas barrier)
 (modules tx_parallel_cmp_bench)
 (package kcas_test))

(test
 (name xt_parallel_cmp_bench)
 (libraries kcas barrier)
 (modules xt_parallel_cmp_bench)
 (package kcas_test))

(test
 (name ms_queue_test)
 (libraries kcas)
 (modules ms_queue_test)
 (package kcas_test))

(test
 (name example)
 (libraries kcas)
 (modules example)
 (package kcas_test))
