(library
 (name barrier)
 (modules barrier)
 (package kcas))

(library
 (name xt_linked_queue)
 (libraries kcas)
 (modules xt_linked_queue)
 (package kcas))

(library
 (name xt_stack)
 (libraries kcas)
 (modules xt_stack)
 (package kcas))

(test
 (name test)
 (libraries kcas barrier)
 (modules test)
 (package kcas))

(test
 (name xt_test)
 (libraries kcas kcas_data xt_linked_queue xt_stack)
 (modules xt_test)
 (package kcas_data))

(test
 (name test_overlapping_loc)
 (libraries kcas)
 (modules test_overlapping_loc)
 (package kcas))

(test
 (name benchmark)
 (libraries kcas)
 (modules benchmark)
 (package kcas))

(test
 (name xt_benchmark)
 (libraries kcas)
 (modules xt_benchmark)
 (package kcas))

(test
 (name xt_parallel_cmp_bench)
 (libraries kcas barrier)
 (modules xt_parallel_cmp_bench)
 (package kcas))

(test
 (name ms_queue_test)
 (libraries kcas)
 (modules ms_queue_test)
 (package kcas))

(test
 (name example)
 (libraries kcas)
 (modules example)
 (package kcas))
