(library
 (name kcas)
 (public_name kcas)
 (libraries domain-local-await domain-local-timeout multicore-magic))

(rule
 (targets domain.ml)
 (deps domain.ocaml4.ml)
 (enabled_if
  (< %{ocaml_version} 5.0.0))
 (action
  (progn
   (copy domain.ocaml4.ml domain.ml))))

(mdx
 (package kcas)
 (deps
  (package kcas))
 (preludes kcas.prelude.ml)
 (libraries kcas domain_shims)
 (files kcas.mli))
