(library
 (name kcas_data)
 (public_name kcas_data)
 (libraries
  (re_export kcas)
  multicore-magic))

(rule
 (targets domain.ml)
 (deps domain.ocaml4.ml)
 (enabled_if
  (< %{ocaml_version} 5.0.0))
 (action
  (progn
   (copy domain.ocaml4.ml domain.ml))))

(mdx
 (package kcas_data)
 (deps
  (package kcas)
  (package kcas_data))
 (libraries kcas kcas_data)
 (files kcas_data.mli))
