(tests
 (names
  accumulator_test_stm
  dllist_test
  dllist_test_stm
  hashtbl_test
  hashtbl_test_stm
  linearizable_chaining_example
  lru_cache_example
  mvar_test
  queue_test
  queue_test_stm
  stack_test
  stack_test_stm
  xt_test)
 (libraries
  scheduler
  picos_std.structured
  alcotest
  kcas
  kcas_data
  domain_shims
  qcheck-core
  qcheck-stm.stm
  stm_run
  (select
   empty.ml
   from
   (qcheck-stm.domain -> empty.ocaml5.ml)
   (-> empty.ocaml4.ml)))
 (package kcas_data))
